clang/test/BSC/Negative/Ownership/Owned/owned_CStyleCast_typedef/owned_CStyleCast_typedef.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

typedef int* _Owned myInt;

void test () {
    int x = 10;
    int* p = &x;
    myInt p1 = __take_from_raw(p);
} // expected-error {{memory leak of value: `p1`}}